<?xml version="1.0" encoding="utf-8"?>
<resources>

      <string name="app_name">数独游戏</string>
    <string name="mystring">数独游戏</string>
    <string name="menu_settings">Settings</string>
    <string name="gamebeging">游戏开始</string>
    <string name="gameover">退出游戏</string>
    <string name="gamesetting">关于游戏</string>
    <string name="gamecontinue">游戏继续</string>
    <string name="about_content">数独游戏简介，數獨游戏在9x9的方格内进行，分为3x3的小方格，
	    每一横排每一竖排每一斜排都是1-9九个数字。每一横排每一竖排每一斜排不得重复任何一个数字。</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_about">About</string>
</resources>